# steep

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  deny.toml  notes.md
.config/: nextest.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: base.yml  c8s.yml  test.yml
crates/igvm-tools/: Cargo.toml  Dockerfile  README.md
crates/igvm-tools/.github/workflows/: ci.yml
crates/igvm-tools/examples/: README.md  build.sh  measure.sh
crates/igvm-tools/src/: build.rs  builder.rs  hob.rs  hypervisor.rs  lib.rs  main.rs  manifest.rs  measure.rs  ovmfmeta.rs  x86regs.rs
crates/igvm-tools/tests/: builder_tests.rs  hob_tests.rs  hypervisor_tests.rs  measure_tests.rs  ovmfmeta_tests.rs  x86regs_tests.rs
crates/rtmr3-hook/: Cargo.toml
crates/rtmr3-hook/src/: main.rs
crates/tdx-measure/: Cargo.toml  README.md
crates/tdx-measure/acpi-extract/: Dockerfile  extract.sh
crates/tdx-measure/src/: ccel.rs  esp.rs  lib.rs  main.rs  pe.rs  rtmr.rs  tdvf.rs
docs/: ARCHITECTURE.md  C8S-IMAGE.md  CONCEPTS.md  DEPLOYING.md  FAQ.md  GPU-CC-OPERATIONS.md  GPU-IMAGE-PLAN.md  KERNEL_CONFIGURATION.md  MANIFEST.md  PLAN.md  REPRODUCIBILITY.md  THREAT_MODEL.md  TUTORIAL.md  USAGE.md  VERIFYING.md  VERSIONING.md
docs/seal-docs/: README.md  design.md  guide.md
docs/superpowers/plans/: 2026-03-14-steep-pipeline-wiring.md  2026-03-16-steep-container.md  2026-03-17-mkosi-static-base-config.md  2026-03-18-container-cloud-init.md
docs/superpowers/specs/: 2026-03-13-lunal-build-design.md  2026-03-14-steep-pipeline-wiring.md  2026-03-16-demo-design.md  2026-03-17-cloud-init-cidata-partition-design.md  2026-03-17-mkosi-static-base-config-design.md
examples/: caddy.yaml  privateclaw.yaml
examples/cloud-init/: meta-data  run.sh  user-data
examples/cloud-init/privateclaw/: user-data
examples/container/: Dockerfile  index.html  run.sh
examples/privateclaw/: meta-data  user-data
firmware/: LICENSE  README.md
initrd/: init
kernel/: c8s-dev.config  c8s.config  confidential.config  config-x86_64.snapshot  dev.config  gpu.config  hardening.config  required.config  version
mkosi/base/: mkosi.conf  mkosi.env  mkosi.finalize  mkosi.preinst
mkosi/base/acpi-tables/: dsdt.asl
mkosi/base/mkosi.conf.d/: tools.conf
mkosi/base/mkosi.extra/etc/: hostname  shadow
mkosi/base/mkosi.extra/etc/sysctl.d/: 99-kspp-hardening.conf
mkosi/base/mkosi.extra/etc/systemd/system-preset/: 10-cloud-init.preset
mkosi/base/mkosi.extra/usr/lib/systemd/system-preset/: 10-no-firstboot.preset  100-disable-hv-kvp.preset
mkosi/base/mkosi.postinst.d/: 00-nftables.sh
mkosi/base/mkosi.profiles/attest/: mkosi.conf  mkosi.sync
mkosi/base/mkosi.profiles/attest-gpu/: mkosi.conf  mkosi.sync
mkosi/base/mkosi.profiles/attest-gpu/mkosi.extra/etc/attestation-api/: config.toml
mkosi/base/mkosi.profiles/attest-gpu/mkosi.extra/etc/systemd/system/: attestation-api.service
mkosi/base/mkosi.profiles/attest/mkosi.extra/etc/attestation-api/: config.toml
mkosi/base/mkosi.profiles/attest/mkosi.extra/etc/systemd/system/: attestation-api.service
mkosi/base/mkosi.profiles/c8s/: image-policy.yaml.in  mkosi.conf  mkosi.sync  user-data
mkosi/base/mkosi.profiles/c8s/mkosi.extra/etc/nri/conf.d/: image-policy.yaml
mkosi/base/mkosi.profiles/c8s/mkosi.extra/etc/profile.d/: rke2-path.sh
mkosi/base/mkosi.profiles/c8s/mkosi.extra/etc/rancher/rke2/: audit-policy.yaml  config.yaml  (+1 more)
mkosi/base/mkosi.profiles/c8s/mkosi.extra/etc/sysctl.d/: 90-rke2.conf  99-c8s-bpf.conf
mkosi/base/mkosi.profiles/c8s/mkosi.extra/etc/sysusers.d/: confos-rke2.conf
mkosi/base/mkosi.profiles/c8s/mkosi.extra/etc/tmpfiles.d/: confos-rke2.conf
mkosi/base/mkosi.profiles/console/: mkosi.conf
mkosi/base/mkosi.profiles/dev/: mkosi.conf
mkosi/base/mkosi.profiles/gpu/: mkosi.conf
mkosi/base/mkosi.profiles/gpu/mkosi.extra/etc/modules-load.d/: nvidia.conf
mkosi/base/mkosi.profiles/ssh/: mkosi.conf
mkosi/base/mkosi.repart/: 10-root.conf
mkosi/cidata/: mkosi.cache  mkosi.conf  mkosi.pkgcache  mkosi.tools
mkosi/cidata/mkosi.repart/: 00-cidata.conf
mkosi/initrd/: mkosi.conf  mkosi.finalize
mkosi/initrd/mkosi.extra/: init
mkosi/kernel-builder/: mkosi.conf
seal-docs/: README.md  development.md  guide.md
src/: container.rs  convert.rs  kernel_cache.rs  lib.rs  main.rs  manifest.rs  nftables.rs  pipeline.rs  qemu.rs  source.rs  tools.rs
src/commands/: base.rs  build.rs  cloud_init.rs  container.rs  igvm.rs  kernel.rs  mod.rs  publish.rs  pull.rs  push.rs  run.rs  seal.rs
src/compose/: disk.rs
src/igvm/: invoke.rs
src/kernel/: compile.rs  config.rs  fetch.rs  manifest.rs  version.rs
src/mkosi/: config.rs
src/uki/: build.rs
tests/: cli.rs  container.rs  convert.rs  e2e.sh  igvm_invoke.rs  kernel.rs  manifest.rs  mkosi_config.rs  nftables.rs  qemu.rs  qemu_scratch.rs  source.rs  tools.rs  uki_build.rs
tests/fixtures/: kernel_manifest.json
(+21 files in other folders)
