[package]
name = "steep"
version = "0.1.0"
edition = "2021"

[dependencies]
which = "7"
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
clap-verbosity-flag = "3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
thiserror = "2"
tempfile = "3"
fs-err = "3"
humansize = "2"
chrono = "0.4"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
