[package]
name = "igvm-tools"
version = "0.1.0"
edition = "2021"
description = "Build and measure IGVM files for confidential VMs"
license = "Apache-2.0"

[dependencies]
igvm = "0.4"
igvm_defs = "0.4"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
zerocopy = { version = "0.8", features = ["derive"] }
bitfield-struct = "0.10"
uguid = "2"
chrono = { version = "0.4", features = ["serde"] }
