[package]
name = "rtmr3-hook"
version = "0.1.0"
edition = "2021"
description = "OCI createContainer hook: measure the workload container image into TDX RTMR[3]"

[[bin]]
name = "rtmr3-hook"
path = "src/main.rs"

[dependencies]
anyhow = "1"
serde_json = "1"
sha2 = "0.10"

[dev-dependencies]
hex = "0.4"
