[package]
name = "tdx-measure"
version = "0.1.0"
edition = "2021"
description = "Offline TDX measurement computation and attestation verification"
license = "Apache-2.0"
repository = "https://github.com/confidential-dot-ai/steep"

[lib]
name = "tdx_measure"

[[bin]]
name = "tdx-measure"
required-features = ["cli"]

[features]
default = ["cli"]
cli = ["dep:clap", "dep:serde_json"]

[dependencies]
anyhow = "1"
sha2 = "0.10"
hex = "0.4"
subtle = "2.6"
clap = { version = "4", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
# fatfs parses the ESP (FAT32) partition inside disk.raw so RTMR[1] can
# include systemd-boot's PE Authenticode hash — TDVF's real boot flow is
# `TDVF → /EFI/BOOT/BOOTX64.EFI (systemd-boot) → UKI`, so the bootloader
# binary is measured as a separate EV_EFI_BOOT_SERVICES_APPLICATION event
# before the UKI. Without parsing the ESP, steep can't see those bytes
# and skips them in the chain.
fatfs = { version = "0.3", default-features = false, features = ["std"] }

[profile.release]
overflow-checks = true
